syntax = "proto3";
package dreanity.saturn.treasury;

import "gogoproto/gogo.proto";
import "treasury/params.proto";
import "treasury/treasurer.proto";
import "treasury/gas_price.proto";
import "treasury/gas_bid.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/dreanity/saturn/x/treasury/types";

// GenesisState defines the treasury module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  Treasurer treasurer = 2 [(gogoproto.nullable) = false];
  repeated GasPrice gasPriceList = 3 [(gogoproto.nullable) = false];
  repeated GasBid gasBidList = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
